  (Ie. not necessarily at the end)


What's New in Pylint 2.13.4?
============================
Release date: TBA

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  a comprehension's filter.

  Closes #6035

* Include ``testing_pylintrc`` in source and wheel distributions.

  Closes #6028

* Fix crash for ``unneccessary-ellipsis`` checker when an ellipsis is used inside of a container or a lambda expression.

  Closes #6036
  Closes #6037
  Closes #6048


What's New in Pylint 2.13.3?
============================
Release date: 2022-03-29

* Fix false positive for ``unnecessary-ellipsis`` when using an ellipsis as a default argument.

  Closes #5973

* Fix crash involving unbalanced tuple unpacking.

  Closes #5998

* Fix false positive for 'nonexistent-operator' when repeated '-' are
  separated (e.g. by parens).

  Closes #5769


What's New in Pylint 2.13.2?
============================
Release date: 2022-03-27

* Fix crash when subclassing a ``namedtuple``.

  Closes #5982

* Fix false positive for ``superfluous-parens`` for patterns like
  "return (a or b) in iterable".

  Closes #5803

* Fix a false negative regression in 2.13.0 where ``protected-access`` was not
  raised on functions.

  Fixes #5989

* Better error messages in case of crash if pylint can't write the issue template.

  Refer to #5987


What's New in Pylint 2.13.1?
============================
Release date: 2022-03-26

* Fix a regression in 2.13.0 where ``used-before-assignment`` was emitted for
  the usage of a nonlocal in a try block.

  Fixes #5965

* Avoid emitting ``raising-bad-type`` when there is inference ambiguity on
  the variable being raised.

  Closes #2793

* Loosen TypeVar default name pattern a bit to allow names with multiple uppercase
  characters. E.g. ``HVACModeT`` or ``IPAddressT``.

  Closes #5981
