@@ -51,6 +51,11 @@ Release date: TBA
 
   Closes #6028
 
+* Fix crash in ``super-init-not-called`` checker when using ``ctypes.Union``.
+
+  Closes #6027
+
+
 * Fix crash for ``unneccessary-ellipsis`` checker when an ellipsis is used inside of a container or a lambda expression.
 
   Closes #6036
